<resources>

    <string name="app_name">Football League</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="search">Search</string>

    <string-array name="league_img">
        <item>@drawable/league1</item>
        <item>@drawable/league2</item>
        <item>@drawable/league3</item>
        <item>@drawable/league4</item>
        <item>@drawable/league5</item>
        <item>@drawable/league6</item>
        <item>@drawable/league7</item>
        <item>@drawable/league8</item>
        <item>@drawable/league9</item>
        <item>@drawable/league10</item>
    </string-array>

    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>American Mayor League</item>
        <item>Portuguese Primeira Liga</item>
        <item>Spanish La Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>

    <string-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4346</item>
        <item>4344</item>
        <item>4335</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>

    <string name="title_activity_league_detail">LeagueDetailActivity</string>
    <string name="title_detail">Detail</string>
    <string name="title_match">Match</string>
    <string name="vs">vs</string>
    <string name="goals">Goals</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="forwards">Forwards</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="substitutes">Substitutes</string>
    <string name="defenders">Defenders</string>
    <string name="midfielders">Midfielders</string>
    <string name="red_cards">Red Cards</string>
    <string name="dash">-</string>
    <string name="no_data_found">No Data Found</string>
    <string name="established">Established</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="lineup">LINEUP</string>
    <string name="match_detail">MATCH DETAIL</string>
    <string name="favorite">Favorites</string>
    <string name="no_favorites_yet">No Favorites Yet</string>
    <string name="matchdetail">Match Detail</string>

</resources>
