<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_detail">

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.dhilasadrah.kadesubmission4.fragment.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/navigation_match"
        android:name="com.dhilasadrah.kadesubmission4.fragment.MatchFragment"
        android:label="@string/title_match"
        tools:layout="@layout/fragment_match" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dhilasadrah.kadesubmission4.fragment.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>