<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LeagueDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/league_banner"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/app_name" />
            <LinearLayout
                android:id="@+id/leagueinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="-25dp">
                <ImageView
                    android:id="@+id/league_badge"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    tools:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/app_name" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp">
                    <TextView
                        android:id="@+id/league_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/colorPrimary"
                        tools:text="League Name"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/established"/>
                    <TextView
                        android:id="@+id/league_formedYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Established"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/country"/>
                    <TextView
                        android:id="@+id/league_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Country"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:text="@string/description"/>
            <TextView
                android:id="@+id/league_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                tools:text="Description"/>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imgEmpty"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:src="@drawable/searchdata"
        android:contentDescription="@string/no_data_found" />

    <ProgressBar
        android:id="@+id/progressBarDetail"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
</RelativeLayout>