<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MatchDetailActivity">

    <ProgressBar
        android:id="@+id/pbMatchDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/match_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_shadow">
                <LinearLayout
                    android:id="@+id/dateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/detail_matchDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        tools:text="Sun, 01 Jan 2020"/>
                    <TextView
                        android:id="@+id/detail_matchTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/colorPrimary"
                        tools:text="00:00 PM"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_toLeftOf="@id/detail_homeScore"
                    android:layout_toStartOf="@id/detail_homeScore"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_below="@id/dateTime"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:id="@+id/detail_homeBadge"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        tools:src="@drawable/league1"
                        android:padding="5dp"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/detail_homeTeam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        tools:text="Home Team"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/detail_homeScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/versus"
                    android:layout_toStartOf="@id/versus"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/dash" />
                <TextView
                    android:id="@+id/versus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:text="@string/vs"/>
                <TextView
                    android:id="@+id/detail_awayScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/versus"
                    android:layout_toEndOf="@id/versus"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:layout_marginEnd="25dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/dash" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_toRightOf="@id/detail_awayScore"
                    android:layout_toEndOf="@id/detail_awayScore"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:id="@+id/detail_awayBadge"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        tools:src="@drawable/league6"
                        android:padding="5dp"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/detail_awayTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        tools:text="Away Team"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:background="@drawable/rectangle_shadow">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/match_detail"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    tools:targetApi="o">
                    <TextView
                        android:id="@+id/home_goals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/dash"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/goals"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/away_goals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/dash"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    tools:targetApi="o">
                    <TextView
                        android:id="@+id/home_yellowCards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/dash"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/yellow_cards"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/away_yellowCards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/dash"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    tools:targetApi="o">
                    <TextView
                        android:id="@+id/home_redCards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/dash"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/red_cards"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/away_redCards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/dash"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:background="@drawable/rectangle_shadow"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/lineup"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    tools:targetApi="o">
                    <TextView
                        android:id="@+id/home_goalKeeper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/goal_keeper"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/away_goalKeeper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:gravity="center"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    tools:targetApi="o">
                    <TextView
                        android:id="@+id/home_defenders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/defenders"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/away_defenders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:gravity="center"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    tools:targetApi="o">
                    <TextView
                        android:id="@+id/home_midfielders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:layout_weight="1"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/midfielders"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/away_midfielders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:gravity="center"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    tools:targetApi="o">
                    <TextView
                        android:id="@+id/home_forwards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/forwards"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/away_forwards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:gravity="center"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    tools:targetApi="o">
                    <TextView
                        android:id="@+id/home_substitutes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/substitutes"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/away_substitutes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:gravity="center"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>